Split operator slides

--- a/index.html
+++ b/index.html
@@ -187,6 +187,28 @@ Så la oss like greit kvitte oss med `()` i metodekall!
     .ruby
     1 + 1 #=> true
 
+---
+
+.big-code
+
+# Operatorer er metoder
+
+    .ruby
+    1 + 1 #=> true
+
+er det samme som
+
+    .ruby
+    1.+(1) #=> true
+---
+
+.big-code
+
+# Operatorer er metoder
+
+    .ruby
+    1 + 1 #=> true
+
 er det samme som
 
     .ruby
