rename name variable for clarity

--- a/index.html
+++ b/index.html
@@ -783,8 +783,8 @@ Siste linje returneres!
 
     .ruby
     class User
-      def name=(name) # istedenfor setName
-        @name = name
+      def name=(new_name) # istedenfor setName
+        @name = new_name
       end
 
       def name # istedenfor getName
@@ -812,8 +812,8 @@ gettere og settere er kjipt å skrive
 
     .ruby
     class User
-      def name=(name) # istedenfor setName
-        @name = name
+      def name=(new_name) # istedenfor setName
+        @name = new_name
       end
 
       def name # istedenfor getName
